--- a/fron2/src/app/pages/home/home.component.html
+++ b/fron2/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home-container container mt-4">
 
-  <p-button label="Cerrar Sesión" icon="pi pi-sign-out" class="p-button-danger mb-3" (click)="logout()"></p-button>
+  <p-button label="Cerrar Sesión" icon="pi pi-sign-out"  (click)="logout()"></p-button>
 
   <!-- Header con título y botón -->
   <div *ngIf="isAdmin" class="d-flex justify-content-between align-items-center mb-4">
