se pintan buses y parada correctamente, falta tiempo llegada y q se actualicen los buses

--- a/fron2/src/app/pages/home/home.component.html
+++ b/fron2/src/app/pages/home/home.component.html
@@ -20,14 +20,11 @@
         </div>
 
       </div>
-<div *ngIf="isAdmin" class="d-flex justify-content-between align-items-center mb-3">
-  <button 
-    class="p-button-success p-button-rounded p-button-outlined boton-nuevo"
-    (click)="openModal()"
-  >
-    Nuevo Cliente/Usuario
-  </button>
-</div>
+      <div *ngIf="isAdmin" class="d-flex justify-content-between align-items-center mb-3">
+        <button class="p-button-success p-button-rounded p-button-outlined boton-nuevo" (click)="openModal()">
+          Nuevo Cliente/Usuario
+        </button>
+      </div>
 
     </div>
 
