--- a/fron2/src/app/components/buses-table/buses-table.component.html
+++ b/fron2/src/app/components/buses-table/buses-table.component.html
@@ -1,7 +1,6 @@
 <div class="buses-container">
   <h2>Seleccionar Línea</h2>
 
-  <!-- Selector de línea -->
   <div class="linea-selector">
     <select
       [(ngModel)]="lineaSeleccionada"
@@ -14,7 +13,6 @@
       </option>
     </select>
 
-    <!-- Botón de limpiar solo si hay línea seleccionada -->
     <button
       *ngIf="lineaSeleccionada"
       class="btn-clear"
@@ -26,4 +24,52 @@
   </div>
 
   <div id="map" style="height: 400px; margin-top: 1rem;"></div>
+
+<div *ngIf="paradaSeleccionadaData" class="info-panel-container">
+  <p-panel [style]="{'width': '350px'}">
+    
+    <ng-template pTemplate="header">
+      <div class="panel-header">
+        <span class="p-panel-title">Detalle de Parada</span>
+        <button 
+          pButton 
+          type="button" 
+          icon="pi pi-times" 
+          class="p-button-secondary p-button-text" 
+          (click)="cerrarPanel()">
+        </button>
+      </div>
+    </ng-template>
+
+    <ng-template pTemplate="content">
+      <h3>{{ paradaSeleccionadaData.nombreParada }}</h3>
+      <p><strong>Dirección:</strong> {{ paradaSeleccionadaData.direccion || 'No disponible' }}</p>
+      
+      <hr>
+
+      <h4>Líneas que pasan por aquí:</h4>
+
+      <div *ngIf="lineasDeParada === null">
+        <p>Cargando líneas...</p>
+      </div>
+
+      <div *ngIf="lineasDeParada !== null">
+        
+        <div *ngIf="lineasDeParada.length === 0">
+          <p>No se encontraron líneas para esta parada.</p>
+        </div>
+        
+        <ul class="lineas-list" *ngIf="lineasDeParada.length > 0">
+          <li *ngFor="let linea of lineasDeParada">
+            <span class="linea-codigo">({{ linea.codLinea }})</span> 
+            {{ linea.nombreLinea }}
+          </li>
+        </ul>
+
+      </div>
+    </ng-template>
+
+  </p-panel>
+</div>
+
 </div>
